# easymc

./: CMakeLists.txt  README
src/: CMakeLists.txt  common.h  config.h  device.c  device.h  emc.h  global.c  global.h  ipc.c  ipc.h  msg.c  msg.h  plug.c  plug.h  tcp.c  tcp.h
src/util/: event.c  event.h  hashmap.c  hashmap.h  heap.c  heap.h  idqueue.c  idqueue.h  lock.c  lock.h  map.c  map.h  merger.c  merger.h  nqueue.c  nqueue.h  pqueue.c  pqueue.h  queue.h  ringarray.c  ringarray.h  ringbuffer.c  ringbuffer.h  ringqueue.c  ringqueue.h  sendqueue.c  sendqueue.h  sockhash.c  sockhash.h  thread.c  thread.h  uniquequeue.c  uniquequeue.h  unpack.c  unpack.h  utility.c  utility.h
src/util/memory/: jemalloc.c  jemalloc.h  jemalloc_config.h
test/: CMakeLists.txt  emc_local.c  emc_pressure.c  emc_remote.c
